--- a/build.properties
+++ b/build.properties
@@ -4,5 +4,6 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                contexts.xml,\
-               fragment.e4xmi
+               fragment.e4xmi,\
+               viewfragment.e4xmi
 source.. = src/
