--- a/plugin.xml
+++ b/plugin.xml
@@ -2,10 +2,20 @@
 <?eclipse version="3.4"?>
 <plugin>
 	<!-- e4 now -->
-	<extension point="org.eclipse.e4.workbench.model" id="e4toE4.menutest.fragment">
+	<extension point="org.eclipse.e4.workbench.model" id="e3toE4.menutest.fragment">
       <fragment
             apply="initial"
             uri="fragment.e4xmi">
+      </fragment>
+      <!-- e4view stuff
+	<extension
+         id="e3toE4.viewtest.fragment"
+         point="org.eclipse.e4.workbench.model">
+      
+   </extension>  -->
+      <fragment
+            apply="notexists"
+            uri="viewfragment.e4xmi">
       </fragment>
    </extension>
    <!-- e3 now -->
@@ -35,6 +45,7 @@
             commandId="e3viewtest.menu.commands.e3menutest">
       </handler>
 	</extension>
+	<!-- e3view stuff -->
    <extension
          point="org.eclipse.ui.views">
       <category
